--- a/index.css
+++ b/index.css
@@ -3,3 +3,52 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.container1 {
+    margin-top: 20px;
+    display: flex;
+    height: 600px;
+    justify-content: center;
+    align-items: center;
+}
+
+.container2 {
+    display: flex;
+    margin-top: 30px;
+    height: 250px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.bigPicture {
+    width: 600px;
+    height: 600px;
+    margin: 0 50px;
+    border-radius: 30px;
+    border: 1px #545454 solid;
+}
+
+.pictureMini {
+    width: 160px;
+    height: 160px;
+    margin: 0 10px;
+    border-radius: 25px;
+    border: 1px #545454 solid;
+}
+
+.pictureMiddle {
+    width: 200px;
+    height: 200px;
+    margin: 0 10px;
+    border-radius: 25px;
+    border: 1px #545454 solid;
+}
+
+.backAndNextBtn {
+    width: 45px;
+    height: 45px;
+    border: 1px solid #545454;
+    border-radius: 50%;
+    font-size: 30px;
+}
