--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.container1 {
+.containerHead {
     margin-top: 20px;
     display: flex;
     height: 600px;
@@ -12,7 +12,7 @@
     align-items: center;
 }
 
-.container2 {
+.containerBody {
     display: flex;
     margin-top: 30px;
     height: 250px;
@@ -45,7 +45,7 @@
     border: 1px #545454 solid;
 }
 
-.backAndNextBtn {
+.previousAndNextBtn {
     width: 45px;
     height: 45px;
     border: 1px solid #545454;
